[gd_scene load_steps=24 format=3 uid="uid://cuk2rym5ft6xh"]

[ext_resource type="Script" path="res://scripts/creatures/Movement.gd" id="1_vvr10"]
[ext_resource type="Script" path="res://scripts/creatures/CreatureStateManager.gd" id="1_x2b20"]
[ext_resource type="Texture2D" uid="uid://dtictjdhjkuev" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north08.png" id="3_fqdc5"]
[ext_resource type="Texture2D" uid="uid://cxykt62gg3tlb" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk08.png" id="4_gdo20"]
[ext_resource type="Texture2D" uid="uid://c26oljqd3opk0" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north00.png" id="5_7ra7e"]
[ext_resource type="Texture2D" uid="uid://2v04fogg0i3m" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north01.png" id="6_vfgwa"]
[ext_resource type="Texture2D" uid="uid://bepbbnhv8oi4f" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north02.png" id="7_iabio"]
[ext_resource type="Texture2D" uid="uid://ddgutvvshym28" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north03.png" id="8_ixctq"]
[ext_resource type="Texture2D" uid="uid://dhu1q7thruti5" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north04.png" id="9_7kal0"]
[ext_resource type="Texture2D" uid="uid://txu1ms5fg6jc" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north05.png" id="10_5a1mx"]
[ext_resource type="Texture2D" uid="uid://e0f6oej1oth3" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north06.png" id="11_5an3r"]
[ext_resource type="Texture2D" uid="uid://dsyqkxesrrc81" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/north/north07.png" id="12_80k8u"]
[ext_resource type="Texture2D" uid="uid://cj0mxrf007xqy" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk00.png" id="13_xpei7"]
[ext_resource type="Texture2D" uid="uid://bfgbph3ya8yfe" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk01.png" id="14_kwkup"]
[ext_resource type="Texture2D" uid="uid://oome846pb8rh" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk02.png" id="15_67y5l"]
[ext_resource type="Texture2D" uid="uid://bwix5ekwud143" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk03.png" id="16_4qlvg"]
[ext_resource type="Texture2D" uid="uid://0qalim7soc6y" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk04.png" id="17_rf1r5"]
[ext_resource type="Texture2D" uid="uid://dqdab6tqvdy5r" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk05.png" id="18_kirg3"]
[ext_resource type="Texture2D" uid="uid://ot1jnk71jqvc" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk06.png" id="19_hpgg6"]
[ext_resource type="Texture2D" uid="uid://dc0rfpl7qbyl0" path="res://Sprites/fofsamplesprites/creatures/elven_warrior/south walk/south walk07.png" id="20_ovdom"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7avqt"]
resource_name = "walk"
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fqdc5")
}],
"loop": true,
"name": &"idle_north",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_gdo20")
}],
"loop": true,
"name": &"idle_south",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7ra7e")
}, {
"duration": 1.0,
"texture": ExtResource("6_vfgwa")
}, {
"duration": 1.0,
"texture": ExtResource("7_iabio")
}, {
"duration": 1.0,
"texture": ExtResource("8_ixctq")
}, {
"duration": 1.0,
"texture": ExtResource("9_7kal0")
}, {
"duration": 1.0,
"texture": ExtResource("10_5a1mx")
}, {
"duration": 1.0,
"texture": ExtResource("11_5an3r")
}, {
"duration": 1.0,
"texture": ExtResource("12_80k8u")
}, {
"duration": 1.0,
"texture": ExtResource("3_fqdc5")
}],
"loop": true,
"name": &"walk_north",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_xpei7")
}, {
"duration": 1.0,
"texture": ExtResource("14_kwkup")
}, {
"duration": 1.0,
"texture": ExtResource("15_67y5l")
}, {
"duration": 1.0,
"texture": ExtResource("16_4qlvg")
}, {
"duration": 1.0,
"texture": ExtResource("17_rf1r5")
}, {
"duration": 1.0,
"texture": ExtResource("18_kirg3")
}, {
"duration": 1.0,
"texture": ExtResource("19_hpgg6")
}, {
"duration": 1.0,
"texture": ExtResource("20_ovdom")
}, {
"duration": 1.0,
"texture": ExtResource("4_gdo20")
}],
"loop": true,
"name": &"walk_south",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euaxr"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f654s"]
size = Vector2(21.0176, 38.4935)

[node name="Player" type="Node2D"]
script = ExtResource("1_x2b20")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
z_index = 2
collision_layer = 2
collision_mask = 2
script = ExtResource("1_vvr10")
speed = null
rotationSpeed = null

[node name="BasicAttackCooldown" type="Timer" parent="CharacterBody2D"]
wait_time = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_7avqt")
animation = &"idle_south"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
light_mask = 3
visibility_layer = 3
z_index = 2
shape = SubResource("RectangleShape2D_euaxr")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(2, 2)

[node name="hitbox" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/hitbox"]
position = Vector2(4.5, 11.5)
scale = Vector2(3.94907, 1.63664)
shape = SubResource("RectangleShape2D_f654s")
debug_color = Color(1, 0.000887435, 0.0813889, 0.42)

[connection signal="timeout" from="CharacterBody2D/BasicAttackCooldown" to="CharacterBody2D" method="_on_basic_attack_cooldown_timeout"]
[connection signal="body_entered" from="CharacterBody2D/hitbox" to="CharacterBody2D" method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/hitbox" to="CharacterBody2D" method="_on_hitbox_body_exited"]
